--- a/index.html
+++ b/index.html
@@ -1,8 +1,49 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>Emerson Waldorf Robotics Website!</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-<h1>Test</h1>
+
+<div class="parallax_content gradient">
+    <h1>Igniting Innovation!</h1>
+    <h3>We pave the way for the future through groundbreaking ideas and creative solutions. Our community thrives on curiosity and collaboration, where every voice contributes to a vibrant exchange of thoughts. Together, we explore uncharted territories, challenge the status quo, and transform visions into reality. With a commitment to continuous improvement, we embrace change and inspire one another to reach new heights of creativity and ingenuity!</h3>
+</div>
+
+
+<div id="parallax1" class="parallax"></div>
+
+<div class="parallax_content gradient">
+    <h1>Fun and Engagement!</h1>
+    <h3>Join us on an exhilarating journey where creativity meets excitement! Dive into a world filled with interactive experiences, vibrant activities, and endless opportunities to connect. Together, we’ll spark joy, inspire laughter, and create unforgettable memories that bring us closer. Let’s celebrate the power of play and the joy of collaboration!</h3>
+</div>
+
+<div id="parallax2" class="parallax"></div>
+
+<div class="parallax_content gradient">
+    <h1>A Vibrant Community!</h1>
+    <h3>We are a dynamic tapestry of individuals united by shared interests and a passion for connection. Our community thrives on creativity, collaboration, and open dialogue, fostering an environment where ideas flourish and friendships blossom. Together, we celebrate diversity, support one another, and cultivate a sense of belonging that enriches our lives and inspires growth.</h3>
+</div>
+
+<div id="parallax3" class="parallax"></div>
+
+<div class="parallax_content gradient">
+    <h1>We Excel at Troubleshooting!</h1>
+    <h3>As a resourceful community, we tackle challenges head-on with creativity and collaboration. Our approach to troubleshooting is rooted in open communication, diverse perspectives, and a shared commitment to finding solutions. Together, we analyze problems, brainstorm innovative ideas, and support each other through every step of the process. With a focus on learning and growth, we turn obstacles into opportunities for improvement and success.</h3>
+</div>
+
+<div id="parallax4" class="parallax"></div>
+
+<div class="parallax_content gradient">
+    <h1>Join Us</h1>
+    <h3>At the Emerson Waldorf School where we turn dreams into reality</h3>
+</div>
+
+<div style="height: 1000px; display: flex; align-items: center; justify-content: center;">
+    <img src="static/logo.png" id="logo_parallax"  alt="cool logo animation">
+</div>
+
 </body>
 </html>
