Use heartbeat animation

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
     <h3>At the Emerson Waldorf School where we turn dreams into reality</h3>
 </div>
 
-<div style="height: 1000px; display: flex; align-items: center; justify-content: center;">
-    <img src="static/logo.png" id="logo_parallax"  alt="cool logo animation">
+<div class="body_centerer">
+    <div class="body_container">
+        <img src="static/human_outline.png" height="100%">
+        <img src="static/logo.png" id="logo_parallax"  alt="cool logo animation">
+    </div>
 </div>
 
 </body>
