--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 title: Emerson Waldorf Robotics Website!
 layout: raw
 ---
+<link rel="stylesheet" href="/css/mainpage.css">
+
 <div id="parallax_container">
     <div class="parallax_content gradient">
         <h1>Igniting Innovation!</h1>
