--- a/stats.html
+++ b/stats.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>FTC 19971 Statistics</title>
     <script src="/scripts/stats.js" defer></script>
+    <link rel="stylesheet" href="/css/otherpages.css">
+    <script src="/scripts/darkmode.js" defer></script>
 </head>
 <body>
 
